# tzf-android-viewer

./: .gitignore  CMakeLists.txt  HANDOFF_CURRENT_RU.md  HANDOFF_RU.md  README.md  SIGNING.md  TZF_FORMAT.md  settings.gradle.kts
.github/workflows/: build-apk.yml  promote-public-release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  tzf_core.cpp  tzf_core.h  tzf_geometry.cpp  tzf_geometry.h  tzf_pose_graph.cpp  tzf_pose_graph.h  tzf_reader.cpp  tzf_registration.cpp  tzf_registration.h  tzf_turbojpeg.cpp  tzf_turbojpeg.h
docs/superpowers/plans/: 2026-07-11-tzf-core-decoder-implementation.md  2026-07-12-gizmo-global-registration-and-debt-implementation.md  2026-07-14-embedded-tzf-pose-plan.md  2026-07-14-perspective-style-registration-implementation.md  2026-07-14-raw-tzf-perspective-registration-plan.md  2026-07-14-registration-calibration-and-phone-rail-implementation.md  2026-07-16-asc-tzf-export-implementation.md  2026-07-16-instrument-menus-plan.md  2026-07-16-perspective-capture-registration-workflow-plan.md  2026-07-16-point-cloud-renderer-rewrite-plan.md  2026-07-16-workspace-stitching-asc-redesign-plan.md
docs/superpowers/specs/: 2026-07-11-cad-navigation-grid-gizmo-design.md  2026-07-11-preview-navigation-and-measurement-design.md  (+32 more)
tests/: tzf_core_tests.cpp
tools/: export_intensity_oracle_column.ps1  export_oracle_column.ps1  export_spherical_oracle_column.ps1  inspect_tzf_dll.py  run_trace_admin.cmd  trace_tzf_fileio_admin.ps1  tzf_cli.cpp  tzf_registration_cli.cpp
(+103 files in other folders)
