cmake_minimum_required(VERSION 3.22.1)
project(tzfreader)
add_library(tzfreader SHARED tzf_reader.cpp tzf_core.cpp tzf_geometry.cpp tzf_pose_graph.cpp tzf_registration.cpp)
find_library(log-lib log)
target_link_libraries(tzfreader ${log-lib})

find_package(libjpeg-turbo CONFIG QUIET)
if(TARGET libjpeg-turbo::turbojpeg)
    target_sources(tzfreader PRIVATE tzf_turbojpeg.cpp)
    target_link_libraries(tzfreader libjpeg-turbo::turbojpeg)
    target_compile_definitions(tzfreader PUBLIC TZF_HAS_TURBOJPEG=1)
endif()
